rework the homepage, change file to jsx, and edit first markdown docs

--- a/src/components/HomepageFeatures.module.css
+++ b/src/components/HomepageFeatures.module.css
@@ -1,5 +1,11 @@
 /* stylelint-disable docusaurus/copyright-header */
 
+.title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .features {
   display: flex;
   align-items: center;
